--- a/src/app/indexer/table/table.component.html
+++ b/src/app/indexer/table/table.component.html
@@ -1,1 +1,97 @@
-<p>table works!</p>
+<div *ngIf="!loading">
+	<mat-card-title *ngIf="parentType=='alliance'">
+		<div class="form-group row" style='margin: 0px;'>
+			<h3 style='font-weight: 300; color: #304357; vertical-align: center;'>
+				<span>
+					<img src="../../assets/images/player_ico.png" style="height: 25px; margin-top: -5px; margin-right: 8px;"/>
+					<a class="a-link-dialog" routerLink="/indexer/player/{{key}}/{{world}}/{{id}}">{{playerName}}</a>
+				</span>
+			</h3>
+		</div>
+	</mat-card-title>
+	<mat-card-content>
+		<div *ngIf="iterator.length<=0" class="alert alert-warning text-center alert-gd-1">
+			<h3>No {{tableHeader.toLowerCase()}} intel available</h3>
+			<p>Index more reports about this player</p>
+		</div>
+		<div *ngIf="iterator.length>0" class="bb-fixed" [ngClass]="{'bb-fixed-lg':hideAvailable}">
+			<div *ngIf="hideAvailable" class="togglecontainer" style="position: absolute; left: 5px; margin-top: -5px;">
+				<label class="switch">
+					<input type="checkbox" [(ngModel)]="showNonPriority" (change)="cdr.detectChanges()">
+					<span class="slider round"></span>
+				</label>
+				<span class="toggle-label" style="vertical-align: middle !important;">Show duplicate intel</span>
+				<!--<span class="toggle-label" style="vertical-align: middle !important;">Show all<span class="hidden-xs hidden-sm"> (only show 1 record per town)</span></span>-->
+			</div>
+			<button name="open_bb" class="btn btn-success btn-xs"
+			        (click)="openBBdialog()" style="position: absolute; right: 5px; margin-top: -27px;">
+				<i class="fa fa-code"></i> BB code
+			</button>
+		</div>
+		<div *ngIf="iterator.length>0" class="table intel-table">
+
+			<div class="row_custom header header_{{type}}">
+
+				<div class="cell" [ngClass]="{'name_cell':isSeaUnit||type=='myth'}">
+					Town
+				</div>
+				<div class="cell" [ngStyle]="{'text-align': isSeaUnit?'left':''}">
+					{{tableHeader}}
+				</div>
+				<div class="cell">
+					Date
+				</div>
+				<div class="cell csa-cell" *ngIf="csa!=false">	</div>
+			</div>
+
+			<ng-container *ngFor="let town of iterator; let i = index;">
+				<div class="row_spacer" *ngIf="hideAvailable && showNonPriority && i!=0 && town?.priority==true"></div>
+				<div class='row_custom' *ngIf="(showNonPriority || (town?.priority==true&&!showNonPriority))&&(csa==false||town?.csa_prio==true)">
+					<div class="cell" [ngClass]="{'name_cell':isSeaUnit||type=='myth', 'town_sub_cell':hideAvailable && town?.priority==false}">
+						<a routerLink="/indexer/town/{{key}}/{{world}}/{{town.town_id}}" [ngClass]="{'town_sub':hideAvailable && town?.priority==false}">
+							{{!hideAvailable || town?.priority==true?town.town_name:'↳'}}
+						</a>
+
+					</div>
+					<div class="cell" style="text-align: left;" *ngIf="isSeaUnit" title="{{type=='fire'?'attack ship':'bireme'}}">
+		        <span class="unit-icon-xs hidden-xs">
+		          <div class="unit_icon40x40 {{type=='fire'?'attack_ship':'bireme'}}"></div>
+		        </span>
+						<span [outerHTML]="town.units | HideNoLossPipe"></span>
+					</div>
+					<div class="cell" *ngIf="isLandUnit">
+						<div class="unit-row">
+							<div class="unit-icon-sm" *ngFor="let unit of town.units | ValuesPipe; let i = index;" title="{{unit?.name}}">
+								<div class="unit_icon40x40 {{unit.name}}"><span class="unit-val">{{unit.count}}</span></div>
+								<div style="color: #d00;" *ngIf="unit.killed>0">-{{unit.killed}}</div>
+							</div>
+						</div>
+					</div>
+					<div class="cell date-cell">
+						<span [outerHTML]="town.date | IndexDate:'html'"></span>
+					</div>
+					<div class="cell" *ngIf="csa!=false">
+						<button *ngIf="!town.deleted || town?.deleted==false" name="open_bb" class="btn btn-danger btn-xs" style="float: right;"
+						        (click)="deleteIntel(town?.id); town.deleted = true; cdr.detectChanges();">
+							<i class="fa fa-close"></i>&nbsp;Delete
+						</button>
+						<span *ngIf="town.deleted && town?.deleted==true" style="float: right;" title="This record will be deleted within 24 hours.">
+							<p style="font-size: 15px; margin: 0;" class="gd-secondary">Marked for deletion</p>
+							<button name="open_bb" class="btn btn-primary btn-xs" style="margin-top: -6px;"
+							        (click)="deleteIntelUndo(town?.id); town.deleted = false; cdr.detectChanges();">
+								<i class="fa fa-arrow-left"></i>&nbsp;Undo
+							</button>
+						</span>
+					</div>
+				</div>
+			</ng-container>
+
+		</div>
+
+		<h5 class="gd-secondary" *ngIf="csa!=false && iterator.length>0">
+			You are currently logged in to delete records.
+			Click <a class="a-link-dialog" (click)="cleanupLogout();">here</a> if you wish to sign out.
+			<br/>Records marked for deletion will be deleted after 24 hours.
+		</h5>
+	</mat-card-content>
+</div>
