--- a/src/app/indexer/table/table.component.html
+++ b/src/app/indexer/table/table.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!loading">
 	<mat-card-title *ngIf="parentType=='alliance'">
 		<div class="form-group row" style='margin: 0px;'>
-			<h3 style='font-weight: 300; color: #304357; vertical-align: center;'>
+			<h3 style='font-weight: 300; color: #304357; vertical-align: center; margin: 0 auto;'>
 				<span>
 					<img src="../../assets/images/player_ico.png" style="height: 25px; margin-top: -5px; margin-right: 8px;"/>
 					<a class="a-link-dialog" routerLink="/indexer/player/{{key}}/{{world}}/{{id}}">{{playerName}}</a>
