Fix breaking errors (comment dialog calls for now)

--- a/src/app/shared/dialogs/conquest-dialog/conquest.component.html
+++ b/src/app/shared/dialogs/conquest-dialog/conquest.component.html
@@ -7,6 +7,6 @@
 		{{name}}<span class="gd-secondary">'s conquests</span>
 	</h1>
 
-	<app-conquest [embedded]="true" [params]="params" [minimal]="true"></app-conquest>
+	<!--<app-conquest [embedded]="true" [params]="params" [minimal]="true"></app-conquest>-->
 
 </div>
